correct align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ header {
   background-color: white;
   border-bottom: 1px solid #f3735f;
   height: 80px;
+  margin-bottom: 60px;
 }
 
 .logo {
@@ -67,9 +68,6 @@ header {
 /*     MAIN     */
 /* ************ */
 
-main {
-  margin: 60px 0;
-}
 .baseline {
   text-align: center;
   color: #6c6c6c;
@@ -88,7 +86,7 @@ main {
   line-height: 26px;
   padding: 10px 0;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .box-pictures {
@@ -99,25 +97,24 @@ main {
   width: 300px;
   height: 300px;
   object-fit: cover;
-  margin: 0 20px;
+  margin: 0 10px;
   border-radius: 10px;
 }
 
 .ingredients ul {
   margin-left: 20px;
+  list-style: disc;
+  line-height: 22px;
+  color: #6c6c6c;
 }
 
-.ingredients ul li {
-  list-style: disc;
-  color: #6c6c6c;
-  line-height: 22px;
-}
 .smiley {
   font-size: 20px;
 }
 
 .etape {
   margin-bottom: 20px;
+  text-align: justify;
 }
 
 /* ************ */
@@ -131,7 +128,8 @@ footer {
 footer p {
   text-align: center;
   color: #6c6c6c;
-  margin: 45px auto;
+  line-height: 134px;
+  margin-bottom: 0;
 }
 
 .copyright {
